# financial_analyst_agent

./: .gitignore  README.md  pyproject.toml
financial_analyst_crew/: crew.py
src/financial_analyst_crew/: crew.py  main.py
src/financial_analyst_crew/config/: agents.yaml  tasks.yaml
